syntax = "proto3";

option csharp_namespace = "UserService";

service UserService{
  rpc AddPostToUser (AddPostRequest) returns (AddPostResponse);
  rpc DeletePostFromUser (DeletePostRequest) returns (DeletePostResponse);
}

message  AddPostRequest{
  string userId = 1;
  string postId = 2;
}

message AddPostResponse{
  bool success = 1;
  string message = 2;
}

message DeletePostRequest{
  string postId = 1;
}

message DeletePostResponse{
  bool success = 1;
  string message = 2;
}